assets/less/misc/dark.less
.theme-dark {
  --primary-text-color: #e2e2e2;
  --secondary-text-color: #868686;
  --white-color: #282c35;
  --lighter-gray-color: #2f333c;
  --light-gray-color: #3b3e46;
  --mid-gray-color: #666;
  --dark-gray-color: #e6e6e6;
  --darker-gray-color: #fff;

  .logo-image,
  .cover-icon-image {
    &:not(.white) {
      opacity: 0;
    }

    &.white {
      opacity: 1;
    }
  }

  .sticky {
    background-color: rgba(0,0,0,.6);
  }

  .form-button,
  .pswp__counter {
    color: var(--darker-gray-color);
  }

  .share-link {
    background-color: var(--darker-gray-color);
  }

  .share-link-facebook {
    color: var(--facebook-color);
  }

  .share-link-twitter {
    color: var(--twitter-color);
  }
}

